--- a/config/klor.conf
+++ b/config/klor.conf
@@ -1,3 +1,7 @@
+CONFIG_ZMK_USB_LOGGING=n
+CONFIG_ZMK_SLEEP=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
 # Uncomment these two line to add support for encoders to your firmware
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
