--- a/config/klor.conf
+++ b/config/klor.conf
@@ -1,10 +1,16 @@
+
 CONFIG_ZMK_USB_LOGGING=n
-CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SLEEP=n
+CONFIG_ZMK_IDLE_TIMEOUT=600000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
 
 # Uncomment these two line to add support for encoders to your firmware
 CONFIG_EC11=y
-CONFIG_EC11_TRIGGER_OWN_THREAD=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Uncomment the following line to enable the KLOR OLED Display
 CONFIG_ZMK_DISPLAY=y
@@ -13,4 +19,9 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=40
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=20
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
