--- a/build.yaml
+++ b/build.yaml
@@ -19,3 +19,7 @@ include:
     shield: klor_right
   - board: nice_nano_v2
     shield: settings_reset
+  - board: seeeduino_xiao_ble
+    shield: klor_dongle
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
