docs(confs): 移除dongle支持编码器、OLED显示和单键RGB的配置选项

--- a/config/boards/shields/klor/klor_dongle.conf
+++ b/config/boards/shields/klor/klor_dongle.conf
@@ -2,6 +2,16 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 
 CONFIG_ZMK_SLEEP=n
 
+# Uncomment these two line to add support for encoders to your firmware
+CONFIG_EC11=n
+
+
+# Uncomment the following line to enable the KLOR OLED Display
+CONFIG_ZMK_DISPLAY=n
+
+# Uncomment the following lines to enable per key RGB
+CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_WS2812_STRIP=n
 #CONFIG_ZMK_USB_LOGGING=y
 #CONFIG_LOG_MODE_IMMEDIATE=n
 #CONFIG_LOG_TIMESTAMP_64BIT=y
