refactor(klor): 配置文件调整和注释更新

--- a/build.yaml
+++ b/build.yaml
@@ -15,6 +15,7 @@
 include:
   - board: nice_nano_v2
     shield: klor_left
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n   # Add these cmake-args to the peripherals you wish to use with the dongle
   - board: nice_nano_v2
     shield: klor_right
   - board: nice_nano_v2
