--- a/config/boards/shields/klor/klor_dongle.conf
+++ b/config/boards/shields/klor/klor_dongle.conf
@@ -2,19 +2,6 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
 
 CONFIG_ZMK_SLEEP=n
 
-# Uncomment these two line to add support for encoders to your firmware
-# CONFIG_EC11=n
-
-
-# Uncomment the following line to enable the KLOR OLED Display
-# CONFIG_ZMK_DISPLAY=n
-
-# Uncomment the following lines to enable per key RGB
-# CONFIG_ZMK_RGB_UNDERGLOW=n
-# CONFIG_WS2812_STRIP=n
-#CONFIG_ZMK_USB_LOGGING=y
-#CONFIG_LOG_MODE_IMMEDIATE=n
-#CONFIG_LOG_TIMESTAMP_64BIT=y
-#CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=5000
-#CONFIG_ZMK_LOG_LEVEL_DBG=y
-#CONFIG_KSCAN_LOG_LEVEL_INF=y
+CONFIG_EC11=n
+CONFIG_ZMK_DISPLAY=n
+CONFIG_ZMK_RGB_UNDERGLOW=n
