--- a/build.yaml
+++ b/build.yaml
@@ -15,10 +15,11 @@
 include:
   - board: nice_nano_v2
     shield: klor_left
-    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n   # Add these cmake-args to the peripherals you wish to use with the dongle
   - board: nice_nano_v2
     shield: klor_right
   - board: nice_nano_v2
     shield: settings_reset
   - board: seeeduino_xiao_ble
     shield: klor_dongle
+  - board: seeeduino_xiao_ble
+    shield: settings_reset  
