--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
     "files.associations": {
-        "profile_status.h": "c",
-        "battery_status.h": "c"
+        "output_status.h": "c"
     }
 }
