--- a/config/boards/shields/klor/klor_common.dtsi
+++ b/config/boards/shields/klor/klor_common.dtsi
@@ -24,14 +24,14 @@
 		compatible = "alps,ec11";
 		label = "LEFT_ENCODER";
 		resolution = <4>;
-		status = "disabled";
+		status = "okay";
 	};
 
 	right_encoder: encoder_right {
 		compatible = "alps,ec11";
 		label = "RIGHT_ENCODER";
 		resolution = <4>;
-		status = "disabled";
+		status = "okay";
 	};
 
 	sensors {
