关闭外部电源

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
-        "output_status.h": "c"
+        "output_status.h": "c",
+        "profile_status.h": "c"
     }
 }
