--- a/config/klor.conf
+++ b/config/klor.conf
@@ -25,3 +25,5 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=20
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
+
+CONFIG_ZMK_EXT_POWER=n # 因为xiao ble做dongle不支持外部电源控制，这里只能先关了。
