--- a/config/klor.conf
+++ b/config/klor.conf
@@ -19,11 +19,9 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y # 因为xiao ble做dongle不支持外部电源控制，这里只能先关了。
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=40
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=20
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
-
-CONFIG_ZMK_EXT_POWER=n # 因为xiao ble做dongle不支持外部电源控制，这里只能先关了。
