--- a/config/klor.conf
+++ b/config/klor.conf
@@ -1,3 +1,5 @@
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=10
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
 
 CONFIG_ZMK_USB_LOGGING=n
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
